--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
   scroll-behavior: smooth;
-  background-color: aquamarine;
+  background-color: rgb(254, 254, 254 );
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
