--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+:root {
+    --yellow-text: rgb(232, 170, 49);
+}
+
 .header{
     display: flex;
     flex-direction: column;
@@ -19,10 +23,11 @@
 }
 
 .upper-line__set{
-    padding-top: 24px;
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100%;
 }
 
 .upper-line__info-set{
@@ -31,7 +36,6 @@
     justify-content: left;
     display: flex;
     list-style-type: none;
-    
 }
 
 .info-set__item{
@@ -51,6 +55,7 @@
     padding-right: 170px;
     display: flex;
     align-items: center;
+    gap: 15px;
 }
 
 .personal-area-link{
@@ -81,28 +86,41 @@
     width: 100%;
 }
 
+.middle-line__search-area{
+    position: relative;
+}
+
 .middle-line__search-box{
-    width: 380px;
+    width: 300px;
     height: 41px;
     background-color: rgba(7, 7, 7, 0.03);
     border: 1px rgba(68, 68, 68, 0.5) solid;
     border-radius: 4px;
-    padding-left: 10px;
+    padding-left: 90px;
     display: flex;
     align-items: center;
     margin-left: 10px;
     margin-right: 10px;
+    
+}
+
+.search-box__iner-items{
+    position: absolute;
+    left: 20px;
+    top: 14px;
 }
 
 .search-box__text{
     margin-left: 5px;
     color: rgba(68, 68, 68, 0.5);
+    cursor: pointer;
 }
 
 .middle-line__info-set{
     display: flex;
     justify-content: right;
     align-items: center;
+    font-weight: 600;
 }
 
 .info-set__location-set{
@@ -125,12 +143,14 @@
 .order-call-set__number{
     color: black;
     text-align: center;
+    padding-right: 7px;
 }
 
 .order-call-set__subtitle{
-    color: orangered;
+    padding-top: 5px;
+    color: var(--yellow-text);
     font-weight: 700;
-    text-align: center;
+    text-align: left;
 }
 
 .info-set__like-but{
@@ -148,3 +168,91 @@
     width: 100%;
     height: 100%;
 }
+
+.info-set__cart-set{
+    padding-left: 20px;
+}
+
+.cart-set__cart-wrapper{
+    height: 31px;
+    width: 31px;
+    position: relative;
+    cursor: pointer;
+}
+
+.cart-set__img{
+    display: block;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+.cart-set__indicator-circle{
+    position: absolute;
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    top: 0;
+    right: -6px;
+    background-color: var(--yellow-text);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-set__indicator-num{
+    font-size: 0.7em;
+    display: block;
+    color:white; 
+}
+
+.info-set__make-order-set{
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.make-order-set__sum{
+
+}
+
+.make-order-set__button{
+    color: var(--yellow-text);
+    padding-top: 7px;
+    text-decoration: none;
+}
+
+.header__lower-line{
+    padding-left: 170px;
+
+    background-color: black;
+    color: whitesmoke;
+
+    /* font-family: Montserrat; */
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0em;
+
+    height: 70px;
+}
+
+.lower-line__nav{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    
+}
+
+.nav-item{
+    color: white;
+    text-decoration: none;
+    margin-right: 115px;
+    transition: 0.2s;
+}
+
+.nav-item:hover{
+    color: var(--yellow-text);
+}
+
