--- a/src/components/SingleView/SingleView.css
+++ b/src/components/SingleView/SingleView.css
@@ -149,6 +149,7 @@
     display: block;
     max-width: 400px;
     text-transform: capitalize;
+    font-family: 'Montserrat';
 }
 
 .info-set__price-area{
@@ -218,6 +219,7 @@
     align-items: center;
     gap: 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    font-family: 'Montserrat';
 }
 
 .add-to-cart__cart-pic{
@@ -236,6 +238,7 @@
     color: white;
     background-color: black;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    font-family: 'Montserrat';
 }
 
 .item-description-tabs{
@@ -250,6 +253,13 @@
 .description-tabs__tabs-titles{
     display: flex;
     gap: 64px;
+    padding-bottom: 10px;
+}
+
+.tabs__title-set{
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .tabs-titles__title{
@@ -257,8 +267,13 @@
     position: relative;
 }
 
-.title-bar{
-    
+.title-selected-bar{
+    width: 100%;
+    background-color: orange;
+    height: 2px;
+    position: absolute;
+    top: 27px;
+    left: 0px;
 }
 
 
