--- a/src/components/SingleView/SingleView.css
+++ b/src/components/SingleView/SingleView.css
@@ -180,6 +180,7 @@
     padding-top: 30px;
     display: flex;
     justify-content: space-between;
+    max-height: 50px;
 }
 
 .amount-to-buy-set{
