--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -15,12 +15,8 @@
 }
 
 .card-pic-wrapper{
-    
-    max-height: 290px;
-    max-width: 370px;
-    height: auto;
-    width: 100%;
-    
+    height: 225px;
+    width: 335px;
 }
 
 .card-pic-img{
@@ -28,6 +24,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    max-height: 260px;
 }
 
 .card-name{
