--- a/src/components/MultiView/MultiView.css
+++ b/src/components/MultiView/MultiView.css
@@ -1,9 +1,34 @@
-.multi-view{
-    margin-top: 30px;
-    margin-bottom: 70px;
+.multi-page{
     display: flex;
     padding-left: 175px;
     padding-right: 175px;
-    gap: 30px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+}
+
+.filters-column{
+    flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.filters-title{
+    background-color: black;
+    color: white;
+    height: 70px;
+    width: 375px;
+
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 25px;
+
+    box-sizing: border-box;
+}
+
+
+.shown-items{
+    display: flex;
+    gap: 25px;
     flex-wrap: wrap;
 }
