add hoc withLoader, add Router, general fixes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -181,6 +181,11 @@
     cursor: pointer;
 }
 
+.cart-wraper__basket-link{
+    text-decoration: none;
+    display: block;
+}
+
 .cart-set__img{
     display: block;
     object-fit: contain;
