--- a/src/components/Basket/Basket.css
+++ b/src/components/Basket/Basket.css
@@ -1,3 +1,99 @@
 .basket{
-    
+    padding-left: 170px;
+    padding-right: 170px;
+    padding-top: 50px;
+    background-color: gainsboro;
+    padding-bottom: 100px;
+}
+
+.basket-title{
+    margin: 0;
+    padding: 0;
+}
+
+.basket-list{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.list__item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list__num{
+    max-width: 50px;
+}
+
+.list__photo-wrapper {
+    width: 120px;
+    height: 120px;
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.list__amount{
+    max-width: 100px;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.list__price{
+    width: 100px;
+}
+
+.list__full-price{
+    width: 100px;
+}
+
+.list__name{
+    width: 200px;
+}
+
+.amount-set{
+    display: flex;
+}
+
+.lower-amount{
+    height: 50px;
+    width: 50px;
+    background-color: orange;
+    border: none;
+    cursor: pointer;
+}
+
+.delete-item{
+    height: 50px;
+    width: 50px;
+    background-color:red;
+    border: none;
+    cursor: pointer;
+}
+
+.upper-amount{
+    height: 50px;
+    width: 50px;
+    background-color: orange;
+    border: none;
+    cursor: pointer;
+}
+
+.list__photo-wrapper__img{
+
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.line{
+    background-color: rgb(39, 32, 32);
+    height: 1px;
+    width: 100%;
 }
