--- a/src/components/Basket/Basket.css
+++ b/src/components/Basket/Basket.css
@@ -6,6 +6,11 @@
     padding-bottom: 100px;
 }
 
+.basket-empty-text{
+    font-size: 2em;
+
+}
+
 .basket-title{
     margin: 0;
     padding: 0;
@@ -25,7 +30,9 @@
 }
 
 .list__num{
-    max-width: 50px;
+    box-sizing: border-box;
+    width: 15px;
+    display: block
 }
 
 .list__photo-wrapper {
