--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,5 +1,87 @@
 
 .filter{
     max-width: 375px;
+    margin-right: 20px;
+    background: #FEFEFE;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.list-closed{
+    display: none;
+}
+
+.filter-title{
+    background-color: black;
+    color: white;
+    height: 70px;
+    width: 320px;
+
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 25px;
     
+
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+
+    justify-content: space-between;
+
+}
+
+.filter-show-toggle{
+    transition: 0.2s;
+    cursor: pointer;
+    display: block;
+}
+
+.arrow-rotated{
+    transform: rotate(180deg);
+}
+
+.filter-options-list{
+    padding-left: 30px;
+    padding-top: 35px;
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+}
+
+.checkbox-set{
+    display: flex;
+    align-items: center;
+}
+
+.set__checkbox-component{
+    height: 12px;
+    width: 12px;
+    border: solid 1px orange;
+    position: relative;
+    border-radius: 3px;
+
+    cursor: pointer;
+    position: relative;;
+}
+
+.checkbox-ckeck{
+    position: absolute;
+
+    height: 8px;
+    width: 8px;
+    background-color: orange;
+    border-radius: 2px;
+    left: 2px;
+    top: 2px;
+
+
+}
+
+
+.option-name{
+    padding-left: 15px;
+    font-weight: 400;
+    text-transform: capitalize;
 }
